src/main/java/frontend/generated/RamParser.java
/* Generated By:JavaCC: Do not edit this line. RamParser.java */
    package frontend.generated;
    import syntaxtree.*;
    public class RamParser implements RamParserConstants {

/*
void Goal() :
{}
{  
    ( RamToken() )*  <EOF> 
}

void RamToken():
{}
{
  <CLASS>  |  <IDENTIFIER> | <LBRACE> | <PUBLIC> | <STATIC> | <VOID> |
  <MAIN> | <LPAREN> | <STRING> | <LSQPAREN> | <RSQPAREN> | <RPAREN> | <RBRACE> |
  <PLUSEQUALS> | <SEMICOLON> | <RETURN> | <COMMA> | <INTEGER> | <BOOLEAN> | <ASSIGN> |
  <IF> | <ELSE> | <WHILE> | <FOREACH> | <COLON> | <PRINT> | <PRINTLN> | <AND> |
  <OR> | <LESSTHAN> | <LESSTHANOREQ> | <EQUALITY> | <PLUS> | <MINUS> | <TIMES> |
  <DOT> | <LENGTH> | <INTEGER_LITERAL> | <TRUE> | <FALSE> | <THIS> | <NEW> |
  <NOT>
}
*/
  static final public Program Goal() throws ParseException {
    MainClass m;
    ClassDeclList cl = new ClassDeclList();
    ClassDecl c;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                        cl.addElement(c);
    }
    jj_consume_token(0);
      {if (true) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
    Identifier i1;
    Identifier i2;
    Statement s;
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
                   i1 = new Identifier(token.image);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    jj_consume_token(IDENTIFIER);
                   i2 = new Identifier(token.image);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
      {if (true) return new MainClass(i1, i2, s);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
    Identifier i;
    VarDeclList vl = new VarDeclList();
    MethodDeclList ml = new MethodDeclList();
    VarDecl v;
    MethodDecl m;
    jj_consume_token(CLASS);
    jj_consume_token(IDENTIFIER);
                   i = new Identifier(token.image);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      v = VarDecl();
                      vl.addElement(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
                         ml.addElement(m);
    }
    jj_consume_token(RBRACE);
      {if (true) return new ClassDeclSimple(i, vl, ml);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
    Type t;
    Identifier i;
    t = Type();
    jj_consume_token(IDENTIFIER);
                   i = new Identifier(token.image);
    jj_consume_token(SEMICOLON);
      {if (true) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
    Type t;
    Identifier i;
    FormalList fl = new FormalList();
    VarDeclList vl = new VarDeclList();
    VarDecl v;
    StatementList sl = new StatementList();
    Statement s;
    Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    jj_consume_token(IDENTIFIER);
                   i = new Identifier(token.image);
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_4;
      }
      v = VarDecl();
                                   vl.addElement(v);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case FOREACH:
      case PRINT:
      case PRINTLN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_5;
      }
      s = Statement();
                        sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
      {if (true) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
  }

  static final public Formal Formal() throws ParseException {
    Type t;
    Identifier i;
    t = Type();
    jj_consume_token(IDENTIFIER);
                   i = new Identifier(token.image);
      {if (true) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
    FormalList fl = new FormalList();
    Type t;
    Identifier i;
    Formal f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      t = Type();
      jj_consume_token(IDENTIFIER);
                       i = new Identifier(token.image);
          fl.addElement(new Formal(t, i));
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_6;
        }
        f = FormalRest();
                             fl.addElement(f);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
      {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalRest() throws ParseException {
    Type t;
    Identifier i;
    jj_consume_token(COMMA);
    t = Type();
    jj_consume_token(IDENTIFIER);
                   i = new Identifier(token.image);
      {if (true) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
    if (jj_2_2(2)) {
      jj_consume_token(INTEGER);
      jj_consume_token(LSQPAREN);
      jj_consume_token(RSQPAREN);
      {if (true) return new IntArrayType();}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
                {if (true) return new BooleanType();}
        break;
      case INTEGER:
        jj_consume_token(INTEGER);
                {if (true) return new IntegerType();}
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
                    {if (true) return new IdentifierType(token.image);}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
        Type type;
    StatementList sl = new StatementList();
    Statement s1;
    Exp e1;
    Statement s2;
    Exp e2;
    Identifier i1;
    IdentifierExp ie, ie2;
        ExpList el1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
        case IF:
        case WHILE:
        case FOREACH:
        case PRINT:
        case PRINTLN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_7;
        }
        s1 = Statement();
                         sl.addElement(s1);
      }
      jj_consume_token(RBRACE);
      {if (true) return new Block(sl);}
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
      {if (true) return new If(e1, s1, s2);}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      {if (true) return new While(e1, s1);}
      break;
    case FOREACH:
      jj_consume_token(FOREACH);
      jj_consume_token(LPAREN);
      type = Type();
      jj_consume_token(IDENTIFIER);
                     ie = new IdentifierExp(token.image);
      jj_consume_token(COLON);
      jj_consume_token(IDENTIFIER);
                               ie2 = new IdentifierExp(token.image);
      jj_consume_token(RPAREN);
      s1 = Statement();
      {if (true) return new ForEach(s1, type, ie, ie2);}
      break;
    case PRINT:
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      el1 = ExpList();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
      {if (true) return new Print(el1);}
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      jj_consume_token(LPAREN);
      el1 = ExpList();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
      {if (true) return new PrintLn(el1);}
      break;
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_3(2)) {
        jj_consume_token(IDENTIFIER);
                   i1 = new Identifier(token.image);
        jj_consume_token(LSQPAREN);
        e1 = Exp();
        jj_consume_token(RSQPAREN);
        jj_consume_token(ASSIGN);
        e2 = Exp();
        jj_consume_token(SEMICOLON);
      {if (true) return new ArrayAssign(i1, e1, e2);}
      } else if (jj_2_4(2)) {
        jj_consume_token(IDENTIFIER);
                   i1 = new Identifier(token.image);
        jj_consume_token(ASSIGN);
        e1 = Exp();
        jj_consume_token(SEMICOLON);
      {if (true) return new Assign(i1, e1);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
                     i1 = new Identifier(token.image);
          jj_consume_token(PLUSEQUALS);
          e1 = Exp();
          jj_consume_token(SEMICOLON);
      {if (true) return new PlusEquals(i1, e1);}
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
    Exp e;
    e = OrExp();
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp OrExp() throws ParseException {
      Exp e1, e2;
    e1 = AndExp();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_8;
      }
      jj_consume_token(OR);
      e2 = AndExp();
          e1 = new Or(e1, e2);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndExp() throws ParseException {
    Exp e1, e2;
    e1 = EqualityExp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_9;
      }
      jj_consume_token(AND);
      e2 = EqualityExp();
          e1 = new And(e1, e2);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp EqualityExp() throws ParseException {
    Exp e1, e2;
    e1 = RelationalExp();
    label_10:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(EQUALITY);
      e2 = EqualityExp();
        e1 = new Equality(e1, e2);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp RelationalExp() throws ParseException {
    Exp e1, e2;
    e1 = AdditiveExp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESSTHAN:
      case LESSTHANOREQ:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESSTHAN:
        jj_consume_token(LESSTHAN);
        e2 = AdditiveExp();
                                          e1 = new LessThan(e1, e2);
        break;
      case LESSTHANOREQ:
        jj_consume_token(LESSTHANOREQ);
        e2 = AdditiveExp();
                                              e1 = new LessThanOrEqual(e1, e2);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AdditiveExp() throws ParseException {
    Exp e1, e2;
    e1 = MultiplicativeExp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        e2 = MultiplicativeExp();
          e1 = new Plus(e1, e2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        e2 = MultiplicativeExp();
          e1 = new Minus(e1, e2);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp MultiplicativeExp() throws ParseException {
    Exp e1, e2;
    e1 = UnaryExp();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_13;
      }
      jj_consume_token(TIMES);
      e2 = UnaryExp();
          e1 = new Times(e1, e2);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp UnaryExp() throws ParseException {
    Exp e;
    boolean inNot = false;
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_14;
      }
      jj_consume_token(NOT);
              inNot = !inNot;
    }
    e = SuffixExp();
      if (inNot)
        {if (true) return new Not(e);}
      else
        {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp SuffixExp() throws ParseException {
    Exp e1;
    Exp e2;
    ExpList el;
    Identifier i;
    ExpList el2;
    e1 = PrefixExp();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSQPAREN:
      case DOT:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LSQPAREN:
        jj_consume_token(LSQPAREN);
        e2 = Exp();
        jj_consume_token(RSQPAREN);
                     {if (true) return new ArrayLookup(e1, e2);}
        break;
      default:
        jj_la1[19] = jj_gen;
        if (jj_2_6(2)) {
          jj_consume_token(DOT);
          jj_consume_token(IDENTIFIER);
                             i = new Identifier(token.image);
          jj_consume_token(LPAREN);
          el = ExpList();
          jj_consume_token(RPAREN);
                                                   e1 =  new Call(e1, i, el);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
            jj_consume_token(DOT);
            jj_consume_token(LENGTH);
                         {if (true) return new ArrayLength(e1);}
            break;
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PrefixExp() throws ParseException {
    Identifier i;
    Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      jj_consume_token(INTEGER_LITERAL);
                        {if (true) return new IntegerLiteral(Integer.parseInt(token.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
             {if (true) return new True();}
      break;
    case FALSE:
      jj_consume_token(FALSE);
              {if (true) return new False();}
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
                   {if (true) return new IdentifierExp(token.image);}
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      e = Exp();
      jj_consume_token(RPAREN);
      {if (true) return e;}
      break;
    case THIS:
      jj_consume_token(THIS);
             {if (true) return new This();}
      break;
    default:
      jj_la1[21] = jj_gen;
      if (jj_2_7(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INTEGER);
        jj_consume_token(LSQPAREN);
        e = Exp();
        jj_consume_token(RSQPAREN);
      {if (true) return new NewArray(e);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          jj_consume_token(NEW);
          jj_consume_token(IDENTIFIER);
                   i = new Identifier(token.image);
          jj_consume_token(LPAREN);
          jj_consume_token(RPAREN);
      {if (true) return new NewObject(i);}
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpList() throws ParseException {
    ExpList el = new ExpList();
    Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case NOT:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case IDENTIFIER:
      e = Exp();
                    el.addElement(e);
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_16;
        }
        e = ExpRest();
                          el.addElement(e);
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
      {if (true) return el;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpRest() throws ParseException {
    Exp e;
    jj_consume_token(COMMA);
    e = Exp();
      {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_3R_32() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_31() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }
